--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -55,6 +55,7 @@
             android:textSize="20sp"
             android:textAlignment="center"/>
         <Button
+            android:id="@+id/btn_login"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
