--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -41,7 +41,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textSize="20sp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:inputType="textPassword"/>
         <TextView
             android:gravity="center"
             android:layout_width="match_parent"
