--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -18,24 +18,28 @@
         android:orientation="vertical"
         android:gravity="center">
         <Button
+            android:id="@+id/pengumuman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pengumuman">
 
         </Button>
         <Button
+            android:id="@+id/pertemuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pertemuan">
 
         </Button>
         <Button
+            android:id="@+id/frs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FRS">
 
         </Button>
         <Button
+            android:id="@+id/keluar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Keluar">
