--- a/app/src/main/res/layout/pengumuman.xml
+++ b/app/src/main/res/layout/pengumuman.xml
@@ -41,6 +41,7 @@
         </LinearLayout>
 
         <ListView
+            android:id="@+id/listview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/border">
