--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -10,42 +10,58 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="HOME"
-        android:textSize="20sp"/>
+        android:textSize="25sp"/>
     <LinearLayout
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:gravity="center">
-        <Button
-            android:id="@+id/pengumuman"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Pengumuman">
+            android:orientation="vertical"
+            android:gravity="center">
+            <Button
+                android:id="@+id/frs"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:text="FRS">
 
-        </Button>
-        <Button
-            android:id="@+id/pertemuan"
-            android:layout_width="wrap_content"
+            </Button>
+            <Button
+                android:id="@+id/keluar"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:text="Keluar">
+
+            </Button>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Pertemuan">
+            android:orientation="vertical"
+            android:gravity="center">
+            <Button
+                android:id="@+id/pengumuman"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:text="Pengumuman">
 
-        </Button>
-        <Button
-            android:id="@+id/frs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="FRS">
+            </Button>
+            <Button
+                android:id="@+id/pertemuan"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:text="Pertemuan">
 
-        </Button>
-        <Button
-            android:id="@+id/keluar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Keluar">
+            </Button>
 
-        </Button>
+        </LinearLayout>
     </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
