--- a/app/src/main/res/layout/pengumuman.xml
+++ b/app/src/main/res/layout/pengumuman.xml
@@ -10,10 +10,12 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pengumuman"
-            android:textSize="40dp">
+            android:textSize="25sp"
+            android:textAlignment="center">
 
         </TextView>
 
