--- a/app/src/main/res/layout/layout_frs.xml
+++ b/app/src/main/res/layout/layout_frs.xml
@@ -8,21 +8,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingTop="15dp"
-        android:paddingLeft="5dp">
+        android:paddingLeft="5dp"
+        android:layout_gravity="center">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="15dp"
-            android:textColor="@color/black"
-            android:layout_alignParentLeft="true"
             android:text="FRS"
+            android:textColor="@color/lightBlue"
             android:textSize="40dp"
-            >
-        </TextView>
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="bold|italic"
+            android:shadowColor="#000000"
+            android:shadowDx="1.5"
+            android:shadowDy="1.3"
+            android:shadowRadius="1.6"
+            android:textAllCaps="true"></TextView>
     </LinearLayout>
     <ListView
         android:id = "@+id/lst_frs"
