--- a/app/src/main/res/layout/list_frs.xml
+++ b/app/src/main/res/layout/list_frs.xml
@@ -9,7 +9,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingTop="15dp"
-        android:paddingLeft="5dp">
+        android:paddingLeft="5dp"
+        android:background="@drawable/rounded_border"
+        android:layout_margin="30dp">
         <TextView
             android:id = "@+id/smt"
             android:layout_width="match_parent"
