--- a/app/src/main/res/layout/layout_frs.xml
+++ b/app/src/main/res/layout/layout_frs.xml
@@ -6,14 +6,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="30dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="15dp"
-        android:paddingLeft="5dp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_margin="30dp">
 
         <TextView
             android:layout_width="wrap_content"
