--- a/app/src/main/res/layout/layout_smt.xml
+++ b/app/src/main/res/layout/layout_smt.xml
@@ -6,23 +6,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="30dp">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="15dp"
-            android:paddingLeft="5dp">
+            android:layout_gravity="center"
+            android:layout_margin="30dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_margin="15dp"
                 android:textColor="@color/black"
-                android:layout_alignParentLeft="true"
                 android:textSize="40dp"
-                android:id="@+id/thn_ajaran"
-                >
-            </TextView>
+                android:fontFamily="sans-serif-medium"
+                android:shadowColor="#000000"
+                android:shadowDx="1.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
+                android:id="@+id/thn_ajaran"></TextView>
         </LinearLayout>
         <ListView
             android:id = "@+id/lst_matkul"
