--- a/app/src/main/res/layout/tambah_matkul.xml
+++ b/app/src/main/res/layout/tambah_matkul.xml
@@ -1,63 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="30dp"
             android:text="Tambah"
-            android:textSize="40dp">
-
+            android:textColor="@color/lightBlue"
+            android:textSize="40dp"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="bold|italic"
+            android:shadowColor="#000000"
+            android:shadowDx="1.5"
+            android:shadowDy="1.3"
+            android:shadowRadius="1.6">
         </TextView>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-            android:id="@+id/smt">
-
+            android:id="@+id/smt"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp">
         </TextView>
-
         <Spinner
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/list">
-
+            android:id="@+id/list"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/spinner_background"
+            >
         </Spinner>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Prasyarat"
-            android:textSize="30dp">
-
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
         </TextView>
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
         </ListView>
-
-
     </LinearLayout>
-
-
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Ambil"
-        android:backgroundTint="@color/grey"
-        android:textColor="@color/black"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
-
-    </Button>
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom"
+        android:layout_margin="30dp">
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Ambil"
+            android:backgroundTint="@color/grey"
+            android:textColor="@color/black"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            >
+        </Button>
+    </LinearLayout>
+</LinearLayout>
