--- a/app/src/main/res/layout/pengumuman.xml
+++ b/app/src/main/res/layout/pengumuman.xml
@@ -18,14 +18,25 @@
             android:textAlignment="center">
 
         </TextView>
-        <EditText
-            android:id="@+id/search_title"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="Input Title Here"
-            android:background="@drawable/border">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Search">
 
-        </EditText>
+            </TextView>
+            <EditText
+                android:id="@+id/search_title"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:hint="Input Title Here"
+                android:background="@drawable/border">
+
+            </EditText>
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
