menambahkan tombol next

--- a/app/src/main/res/layout/pengumuman.xml
+++ b/app/src/main/res/layout/pengumuman.xml
@@ -73,7 +73,14 @@
             android:background="@drawable/border">
 
         </ListView>
+        <ImageButton
+            android:id="@+id/next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/next">
 
+        </ImageButton>
 
     </LinearLayout>
 
