--- a/app/src/main/res/layout/item_list_pengumuman.xml
+++ b/app/src/main/res/layout/item_list_pengumuman.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/pengumuman"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -13,14 +14,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/TampilJudul"
-            android:textSize="20sp">
+            android:textSize="20sp"
+            android:textStyle="bold">
 
         </TextView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/TampilTags">
+            android:id="@+id/TampilTags"
+            android:textStyle="italic">
 
         </TextView>
 
