--- a/app/src/main/res/layout/detail_pengumuman.xml
+++ b/app/src/main/res/layout/detail_pengumuman.xml
@@ -3,11 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:orientation="vertical">
         <TextView
             android:layout_marginTop="5dp"
             android:gravity="center"
@@ -16,13 +11,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
         <TextView
             android:gravity="center"
             android:id="@+id/tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="italic"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:gravity="center"
+            android:id="@+id/tanggal_dibuat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:gravity="center"
+            android:id="@+id/jam_dibuat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:gravity="center"
+            android:id="@+id/author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"/>
         <View
             android:layout_width="match_parent"
@@ -34,8 +47,6 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             />
-    </LinearLayout>
-
-
 </LinearLayout>
