--- a/app/src/main/res/layout/layout_smt.xml
+++ b/app/src/main/res/layout/layout_smt.xml
@@ -30,6 +30,10 @@
                 android:id="@+id/thn_ajaran"></TextView>
         </LinearLayout>
         <ListView
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:id = "@+id/lst_matkul"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
