--- a/app/src/main/res/layout/list_smt.xml
+++ b/app/src/main/res/layout/list_smt.xml
@@ -11,7 +11,8 @@
         android:paddingTop="15dp"
         android:paddingLeft="5dp"
         android:background="@drawable/rounded_border"
-        android:layout_margin="30dp">
+        android:layout_margin="30dp"
+        >
         <TextView
             android:id = "@+id/smt"
             android:layout_width="match_parent"
