--- a/app/src/main/res/layout/tambah_matkul.xml
+++ b/app/src/main/res/layout/tambah_matkul.xml
@@ -54,9 +54,15 @@
             android:layout_marginBottom="15dp">
         </TextView>
         <ListView
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:id="@+id/prasyarat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </ListView>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,14 +71,42 @@
         android:gravity="bottom"
         android:layout_margin="30dp">
         <Button
+            android:id="@+id/ambil"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Ambil"
-            android:backgroundTint="@color/grey"
-            android:textColor="@color/black"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:enabled="false"
             >
         </Button>
+<!--        <Button-->
+<!--            android:id="@+id/ambil"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Ambil"-->
+<!--            android:enabled="false"-->
+<!--            />-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Matkul yang sudah diambil"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            >
+        </TextView>
+        <ListView
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:id="@+id/matkul_yg_sudah_diambil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </ListView>
     </LinearLayout>
 </LinearLayout>
