perbaikan layout hlm 5

--- a/app/src/main/res/layout/pertemuan.xml
+++ b/app/src/main/res/layout/pertemuan.xml
@@ -32,7 +32,7 @@
                 android:textAllCaps="true"></TextView>
         </LinearLayout>
         <ListView
-            android:id = "@+id/lst_frs"
+            android:id = "@+id/lst_pert"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
