--- a/app/src/main/res/layout/pertemuan.xml
+++ b/app/src/main/res/layout/pertemuan.xml
@@ -30,7 +30,38 @@
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:textAllCaps="true"></TextView>
+
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/date_picker_start"
+                android:text="Pilih Tanggal Mulai!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@color/grey"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/date_picker_end"
+                android:text="Pilih Tanggal Akhir!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@color/grey"
+                android:textStyle="bold"
+                />
+        </LinearLayout>
+        <Button
+            android:id="@+id/tombol_cari"
+            android:layout_marginLeft="10dp"
+            android:text="Cari"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <ListView
             android:id = "@+id/lst_pert"
             android:layout_width="match_parent"
