--- a/app/src/main/res/layout/pertemuan.xml
+++ b/app/src/main/res/layout/pertemuan.xml
@@ -62,6 +62,12 @@
             android:text="Cari"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/undangan"
+            android:layout_marginLeft="10dp"
+            android:text="Lihat Undangan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <ListView
             android:id = "@+id/lst_pert"
             android:layout_width="match_parent"
