bisa menambahkan pertemuan tapi belum bisa nambah partisipan

--- a/app/src/main/res/layout/pertemuan.xml
+++ b/app/src/main/res/layout/pertemuan.xml
@@ -76,6 +76,7 @@
         </ListView>
     </LinearLayout>
     <Button
+        android:id="@+id/tambah"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/round_btn"
